Fix T100998: Speed effect not rendering scene strip subframes

After change in 19bff8eb51f, subframe must be calculated for function
`RE_RenderFrame` in order to render subframes.