source/blender/sequencer/intern/render.c
@@ -1506,8 +1506,16 @@ static ImBuf *seq_render_scene_strip(const SeqRenderData *context,
         re = RE_NewSceneRender(scene);
       }
 
-      RE_RenderFrame(
-          re, context->bmain, scene, have_comp ? NULL : view_layer, camera, frame, 0.0f, false);
+      const float subframe = frame - floorf(frame);
+
+      RE_RenderFrame(re,
+                     context->bmain,
+                     scene,
+                     have_comp ? NULL : view_layer,
+                     camera,
+                     floorf(frame),
+                     subframe,
+                     false);
 
       /* restore previous state after it was toggled on & off by RE_RenderFrame */
       G.is_rendering = is_rendering;
